# OMP_GPU

./: .gitignore  CMakeLists.txt
src/: dotProduct.cpp  dotProduct.h  main.cpp  matVec.cpp  matVec.h  vecAdd.cpp  vecAdd.h
